# wifi_switcher

./: .gitignore  README.md  requirements.txt  setup.cfg  wifi_switcher.py
src/wifi_switcher/: netplan_tools.py  nmcli_tools.py  wifi_switcher.py
