[metadata]
name = wifi_switcher
version = 0.1.7
author = Will Firman
author_email = w.f@quantumcryogenics.com
description = A tool for switching WiFi network using nmcli
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Unix

[options]
package_dir =
    = src
packages = find:
install_requires =
    nmcli

[options.packages.find]
where = src
