[metadata]
name = wifi_switcher
version = 1.0.2
author = Will Firman
author_email = w.f@quantumcryogenics.com
description = A tool for switching WiFi network using netplan
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Unix

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyyaml

[options.packages.find]
where = src
