[metadata]
name = wifi_switcher
version = 1.1.0
author = Will Firman
author_email = w.f@quantumcryogenics.com
description = A tool for switching WiFi network using netplan or nmcli
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Unix

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyyaml
    nmcli

[options.packages.find]
where = src
